# chemical_report_app

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.db
api/: main.py
api/core/: logging.py  security.py
api/middlewares/: logging.py
api/models/: __init__.py  reports_users.py  user.py
api/services/: __init__.py  db.py  llm.py  rate_limiter.py
api/v1/dependencies/: __init__.py  auth.py
api/v1/routes/: auth.py  create_report.py  list_reports.py  reports.py
api/v1/routes/reports/: create.py  delete.py  list.py
api/v1/schemas/: auth.py  get_reports.py  input.py  new_report.py  output.py  reports.py
apps/admin/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
apps/admin/src/: main.js
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: __init__.py  config.py  context.py  logging.py
apps/api/app/middlewares/: logging.py
apps/api/app/models/: __init__.py  report_chat.py  reports_users.py  user.py
apps/api/app/services/: db.py  llm.py
apps/api/app/v1/dependencies/: __init__.py  auth.py
apps/api/app/v1/routes/: admin.py  auth.py
apps/api/notebooks/: test copy.ipynb
apps/api/src/: generate_report.py
apps/api/src/utils/: pdf_generator.py
apps/web/: README.md  index.html  package-lock.json  package.json
apps/web/src/: App.jsx  styles.css
docs/: README.md
infra/docker/: README.md
infra/nginx/: README.md
infra/scripts/: README.md
notebooks/: test.ipynb
src/: generate_report.py
(+9 files in other folders)
